CasparCG 2.0.3 Stable (w.r.t 2.0.3 Alpha)
=========================================

Stage
-----

  o Fixed dead-lock that can occur with multiple mixer tweens.

CasparCG 2.0.3 Alpha (w.r.t 2.0 Stable)
=======================================

General
-------

  o Data files are now stored in UTF-8 with BOM. Latin1 files are still
    supported for backwards compatibility
  o Commands written in UTF-8 to log file but only ascii characters to console.
  o Added supported video formats:
    + 720p2398 (not supported by decklink)
    + 720p2400 (not supported by decklink)
    + 1080p5994
    + 1080p6000
    + 720p30 (not supported by decklink)
    + 720p29.976 (not supported by decklink)

CLK
---

  o CLK protocol implementation can now serve more than one connection at a time
    safely.
  o Added timeline support to the CLK protocol.
  o Refactored parts of the CLK parser implementation.

Consumers
---------

  o Consumers on same channel now invoked asynchronously to allow for proper
    sync of multiple consumers.
  o System audio consumer:
    + no longer provides sync to caspar.
  o Screen consumer:
    + Support for multiple screen consumers on the same channel
    + No longer spin-waits for vsync
    + Now deinterlaces to two separate frames so for example 50i will no longer
      be converted to 25p but instead to 50p for smooth playback of interlaced
      content.
  o Decklink consumer now logs whether a reference signal is detected or not.

Producers
---------

  o Image scroll producer:
    + Field-rate motion instead of frame-rate motion with interlaced video
      formats. This can be overridden by giving the PROGRESSIVE parameter.
    + SPEED parameter now defines pixels per frame/field instead of half pixels
      per frame. The scrolling direction is also reversed so SPEED 0.5 is the
      previous equivalent of SPEED -1. Movements are done with subpixel accuracy
    + Fixed incorrect starting position of image.